# CashLens

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
config/: regras.yaml
docs/: pluggy-consentimento.md
src/cashlens/: categorize.py  cli.py  dashboard.py  formatting.py  models.py  normalize.py  recurrence.py  reports.py  storage.py
src/cashlens/importers/: base.py  csv.py  ofx.py  pluggy.py
tests/: test_categorize.py  test_csv_importer.py  test_formatting.py  test_import_base.py  test_importers.py  test_models.py  test_normalize.py  test_pluggy_importer.py  test_recurrence.py  test_reports.py  test_storage.py
tests/fixtures/: exemplo.csv  exemplo.ofx  exemplo_cartao.ofx  exemplo_fitid_duplicado.ofx
